# financial_rag

./: .env.example  .gitignore  README.md  REFACTORING_NOTES.md  REFACTORING_SUMMARY.md  SYSTEM_PROMPT_REFACTOR.md  example.py  pyproject.toml
src/financial_rag/: __init__.py  file_watcher.py  mcp_server.py  rag_pipeline.py
tests/: __init__.py  conftest.py  test_rag_pipeline.py
